Table "boards" {
  "board_id" int [pk, increment]
  "board_slug" text [unique]
  "board_name" text [unique]
  "board_item_name" text
  "board_description" text
  "board_max_votes" int
}

Table "items" {
  "item_id" int [pk, increment]
  "board_id" integer [unique]
  "item_name" text [unique, not null]
}

Table "votes" {
  "vote_id" int [pk, increment]
  "board_id" integer
  "item_id" integer
  "user_id" text
}

Table "users" {
  "user_id" text [pk]
  "admin" boolean
}

Ref:"boards"."board_id" < "items"."board_id" [delete: cascade]

Ref:"boards"."board_id" < "votes"."board_id" [delete: cascade]

Ref:"items"."item_id" < "votes"."item_id" [delete: cascade]
